kubernetes/portainer-ops/portainer-test-run/src/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-ops-main
  namespace: portainer-ops
spec:
  selector:
    app: portainer-ops-main
  ports:
    - name: http
      port: 8080
      targetPort: 3112
