kubernetes/portainer-ops/portainer-test-run/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ops-main
  namespace: portainer-ops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  rules:
    - host: portainer-ops-main.k8s-app.fcn.applications
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer-ops-main
                port:
                  number: 8080
